--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@ body {
   border-radius: 100%;
 }
 
+.baust_logo{
+  width: 30px;
+  margin-right: 10px;
+}
+
 .sidebar-nav {
   width: var(--offcanvas-width) !important;
 }
@@ -54,3 +59,5 @@ body {
     margin-left: var(--offcanvas-width);
   }
 }
+
+
