--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,25 +43,147 @@ body {
    width: 50px;
    
 }
+
 @media (min-width: 992px) {
   body {
     overflow: auto !important;
+    
   }
-
+  
   .offcanvas-backdrop {
     display: none !important;
   }
-
+  
   .sidebar-nav {
     transform: none !important;
     visibility: visible !important;
     top: var(--topNavbarHeight) !important;
     /*height: calc(100% - var(--offcanvas-width)) !important;*/
   }
-
+  
   main {
     margin-left: var(--offcanvas-width);
   }
 }
 
+/* login-input */
+.input1 {
+  border-radius: 999px;
+  outline: 2px solid rgb(16, 180, 186);
+  border: 0;
+  background-color:rgb(226, 226, 226);
+  outline-offset: 3px;
+  width: 90%;
+  height: 25%;
+  padding: 10px 1rem;
+  transition: 0.15s;
+}
 
+.input1:focus {
+  outline-offset: 5px;
+  background-color: rgb(242, 246, 236)
+}
+/* login-input */
+
+/* button style start */
+.button-login {
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  padding-block: 0.5rem;
+  padding-inline: 1.25rem;
+  background-color: rgb(16, 180, 186);
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffff;
+  gap: 10px;
+  font-weight: bold;
+  border: 3px solid #ffffff4d;
+  outline: none;
+  overflow: hidden;
+  font-size: 15px;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s ease-in-out;
+}
+
+.button-login:hover {
+  transform: scale(1.05);
+  border-color: #fff9;
+}
+
+.button-login:hover .icon {
+  transform: translate(4px);
+}
+
+.button-login:hover::before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+.button-login::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 30%,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
+}
+
+@keyframes shine {
+  0% {
+    left: -100px;
+  }
+
+  60% {
+    left: 100%;
+  }
+
+  to {
+    left: 100%;
+  }
+}
+
+
+/* button style end */
+
+/* container style */
+.container1 {
+
+  height: 100%;
+  /* Add your background pattern here */
+  background-color:#dee9fa;
+  background-image: radial-gradient(rgba(12, 12, 12, 0.171) 2px, transparent 0);
+  background-size: 30px 30px;
+  background-position: -5px -5px;
+  
+}
+
+/* container style */
+/* card */
+
+.card {
+ cursor: pointer;
+ background: rgb(255, 255, 255);
+ border-radius: 5px;
+ border: 1px solid rgba(0, 0, 255, .2);
+ transition: all .2s;
+ box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+}
+
+.card:hover {
+ box-shadow: -12px 12px 2px -1px rgba(0, 0, 255, .2);
+}
+
+/* card */
