--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,19 @@ body {
   background-color: #f5f5f5;
   height: 100vh;
 }
+a:link { 
+  text-decoration: none; 
+}
+a:visited { 
+  text-decoration: none; 
+} 
+a:hover { 
+  text-decoration: none; 
+  color: #000;
+} 
+a:active { 
+  text-decoration: none; 
+}
 
 :root {
   --offcanvas-width: 270px;
@@ -171,6 +184,8 @@ body {
 }
 
 /* container style */
+
+
 /* card */
 
 .card {
@@ -185,5 +200,76 @@ body {
 .card:hover {
  box-shadow: -12px 12px 2px -1px rgba(0, 0, 255, .2);
 }
-
 /* card */
+
+
+
+
+/* bg */
+/* dashbord animation */
+ body {
+    margin: auto;
+   
+    overflow: auto;
+   
+    animation: gradient 150s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+} 
+/* dashbord animation */
+@keyframes gradient {
+ 
+   100% {
+        background-position: 100% 100%;
+    }
+  
+}
+
+.wave {
+    background: rgb(255 255 255 / 25%);
+    border-radius: 1000% 1000% 0 0;
+    position: fixed;
+    width: 200%;
+    height: 12em;
+    animation: wave 10s -3s linear infinite;
+    transform: translate3d(0, 0, 0);
+    opacity: 0.8;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.wave:nth-of-type(2) {
+    bottom: -1.25em;
+    animation: wave 18s linear reverse infinite;
+    opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+    bottom: -2.5em;
+    animation: wave 20s -1s reverse infinite;
+    opacity: 0.9;
+}
+
+@keyframes wave {
+    2% {
+        transform: translateX(1);
+    }
+
+    25% {
+        transform: translateX(-25%);
+    }
+
+    50% {
+        transform: translateX(-50%);
+    }
+
+    75% {
+        transform: translateX(-25%);
+    }
+
+    100% {
+        transform: translateX(1);
+    }
+}
+/* bg */
