--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,123 +311,88 @@ a:active {
 
 
 
-/* CSS */
-.button-86 {
-  all: unset;
-  width: 100px;
-  height: 30px;
-  font-size: 16px;
-  background: transparent;
-  border: none;
-  position: relative;
-  color: #f0f0f0;
-  cursor: pointer;
-  z-index: 1;
-  padding: 10px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  white-space: nowrap;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-86::after,
-.button-86::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -99999;
-  transition: all .4s;
-}
-
-.button-86::before {
-  transform: translate(0%, 0%);
-  width: 100%;
-  height: 100%;
-  background: #28282d;
-  border-radius: 10px;
-}
-
-.button-86::after {
-  transform: translate(10px, 10px);
-  width: 35px;
-  height: 35px;
-  background: #ffffff15;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-radius: 50px;
-}
-
-.button-86:hover::before {
-  transform: translate(5%, 20%);
-  width: 110%;
-  height: 110%;
-}
-
-.button-86:hover::after {
-  border-radius: 10px;
-  transform: translate(0, 0);
-  width: 100%;
-  height: 100%;
-}
-
-.button-86:active::after {
-  transition: 0s;
-  transform: translate(0, 5%);
-}
-
-
 
 .btn1 {
- position: relative;
- font-size: 12px;
- text-transform: uppercase;
- text-decoration: none;
- padding: 1em 2.5em;
- display: inline-block;
- margin-left: 10px;
- border-radius: 6em;
- transition: all .2s;
- border: none;
- font-family: inherit;
- font-weight: 500;
- color: black;
- background-color: #b2bafb;
+  --bg: #041934;
+  --hover-bg: #b2bafb;
+  --hover-text: #000;
+  color: #fff;
+  cursor: pointer;
+  margin-left: 8px;
+  border: 1px solid var(--bg);
+  border-radius: 999px;
+  padding: 0.5em 1em;
+  background: var(--bg);
+  transition: 0.2s;
 }
 
+
 .btn1:hover {
- transform: translateY(-3px);
- box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  color: var(--hover-text);
+  transform: translate(-0.15rem, -0.15rem);
+  background: var(--hover-bg);
+  box-shadow: 0.15rem 0.15rem var(--bg);
 }
 
 .btn1:active {
- transform: translateY(-1px);
- box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translate(0);
+  box-shadow: none;
 }
 
-.btn1::after {
- content: "";
- display: inline-block;
- height: 100%;
- width: 100%;
- border-radius: 100px;
- position: absolute;
- top: 0;
- left: 0;
- z-index: -1;
- transition: all .4s;
+.btn-sm {
+  border-radius: 999px;
+  color: #212121;
+  z-index: 1;
+  position: relative;
+  font-weight: 400;
+  font-size: 13px;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  overflow: hidden;
 }
 
-.btn1::after {
- background-color: #5c636a;
+.btn-sm::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius:999px;
+  background-color: #212121;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms
 }
 
-.btn1:hover::after {
- transform: scaleX(1.2) scaleY(1.4);
- opacity: 0;
+.btn-sm:hover {
+  color: #e8e8e8;
+}
+
+.btn-sm:hover::before {
+  width: 100%;
+}
+
+.btn-sm:active {
+  transform: translate(0);
+  box-shadow: none;
+  transform: translateY(2px) translateX(2px);
 }
 /* button animation */
 
+
+/* input style */
+
+.input:focus, input:hover {
+  outline: none;
+  border-color: rgba(129, 140, 248);
+  background-color: #fff;
+  box-shadow: 0 0 0 5px rgb(129 140 248 / 30%);
+}
+
+
+
+
+/* input style */
