--- a/assets_2/css/main.css
+++ b/assets_2/css/main.css
@@ -1,7 +1,7 @@
 
 :root {
   --default-font: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --heading-font: "Raleway", sans-serif;
+  --heading-font: "g", sans-serif;
   --nav-font: "Poppins", sans-serif;
 }
 
